<resources>
    <string name="app_name">PassKeeper</string>
    <string name="get_started_button">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="strength_password">Password strength: </string>
    <string name="login">login</string>
    <string name="have_an_account">Have an account?</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="signup">SignUp</string>
    <string name="email_regular_expression">^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$</string>
    <string name="username_regular_expression">^[a-zA-Z._]+$</string>
    <string name="welcome_back">Welcome back</string>
    <string name="saved_passwords">Saved passwords</string>
    <string name="how_to_add_password">You can add new password by click on add button in button bar</string>
    <string name="page_content">This page shows all saved passwords added by the user</string>
    <string name="categorized_by_their_tags">categorized by their tags:</string>
    <string name="email_accounts">Email Accounts</string>
    <string name="bank_account">Bank Account</string>
    <string name="social_media_accounts">Social media Accounts</string>
    <string name="web_account">Web Account</string>
    <string name="passwords_list_page">Passwords list page</string>
    <string name="app_name_card">Gmail</string>
    <string name="app_tag_card">Email Account</string>
    <string name="keep_your_passwords_safe">Keep your passwords Safe</string>
    <string name="weak_password_strength">Weak</string>
    <string name="medium_password_strength">Medium</string>
    <string name="strong_password_strength">Strong</string>
    <string name="add_password">Add Password</string>
    <string name="password_app_name">App name</string>
    <string name="add">Add</string>
    <string name="app_tag">App Tag</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="save_and_log_out">Save and log out</string>
    <string name="have_an_account_login">have an account login</string>
    <string name="continueButton">Continue</string>
    <string name="fingerprint_sensor_to_login">fingerprint sensor to login</string>
    <string name="place_your_finger_on">Place your finger on</string>
    <string name="verify_by_email">Verify by email</string>
    <string name="or">Or,</string>
    <string name="please_enter_the_code">Please Enter the code that sent to</string>
    <string name="verify_your_email_address">Verify Your Email Address</string>
    <string name="resend_code">Resend code</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="search_by_app_name">Tap to search by app name</string>
    <string name="deletebutton">Delete App</string>
    <string name="forgot_password">forgot password?</string>
    <string name="Change_password">Change Password</string>
    <string name="OldPassword">Old password </string>
    <string name="NewPassword">New password </string>
    <string name="save">Save </string>
    <string name="password_account">Password of account</string>
</resources>