<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PhoneNumberVerviyPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.VerifyNumberActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="199dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        app:srcCompat="@drawable/fingerprint_authentication_icone"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="288dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/fingerprint_authentication"
        android:textAlignment="center"
        android:textColor="#17096F"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="290dp"
        android:layout_height="38dp"
        android:text="@string/place_your_finger_on"
        android:textAlignment="center"
        android:textColor="#7F7F7F"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/emailAddressInVerify"
        android:layout_width="288dp"
        android:layout_height="36dp"
        android:text="@string/fingerprint_sensor_to_login"
        android:textAlignment="center"
        android:textColor="#7F7F7F"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="88dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744"
        app:srcCompat="@drawable/fingerprint_icone"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/Resend_codeVerfiyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_by_email"
        android:textColor="#6192F5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />


</androidx.constraintlayout.widget.ConstraintLayout>