<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".controllers.AddPasswordActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/add_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/appNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/password_app_name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_hint" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/email_or_phone_number"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/closedEyeButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/white_closed_eye"
                    android:importantForAccessibility="no"
                    android:onClick="showPasswordButtonClicked"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/openedEyeButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/white_opened_eye"
                    android:importantForAccessibility="no"
                    android:onClick="showPasswordButtonClicked"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/generatePassword"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/generate_password"
                android:importantForAccessibility="no"
                android:onClick="generatePassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/strengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength_password"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/passwordStrengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_tag"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/appTag"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started_button"
            android:layout_width="166dp"
            android:layout_height="59dp"
            android:backgroundTint="#0E244F"
            android:onClick="addApp"
            android:text="@string/add"
            android:textSize="20sp"

            app:strokeColor="#6193F6"
            app:strokeWidth="3dp" />

    </LinearLayout>

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.0" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/home_icon"
        android:importantForAccessibility="no"
        android:onClick="openHomePage"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintLeft_toLeftOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <ImageButton
        android:id="@+id/addPasswordButton"
        android:layout_width="72dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/opened_add_icon"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/profile_icon"
        android:importantForAccessibility="no"
        android:onClick="openProfilePage"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>