<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controllers.ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="148dp"
        android:layout_height="153dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:importantForAccessibility="no"
        android:src="@drawable/profileicone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/user_name"
        android:layout_width="167dp"
        android:layout_height="27dp"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:onClick="changePassword"
        android:text="@string/change_password"
        android:textColor="#00C5FF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <Button
        android:id="@+id/Log_out"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:paddingHorizontal="20dp"
        android:text="@string/log_out"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.0" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/home_icon"
        android:importantForAccessibility="no"
        android:onClick="openHomePage"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintLeft_toLeftOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <ImageButton
        android:id="@+id/addPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/add_icon"
        android:importantForAccessibility="no"
        android:onClick="openAddPassword"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="72dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/opened_profile_icon"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/bottom_bar" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#AEBABF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailProfile" />

    <EditText
        android:id="@+id/accountPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_account"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_name" />


</androidx.constraintlayout.widget.ConstraintLayout>
