<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controllers.ChangePasswordProfile">


    <TextView
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:text="@string/Change_password"
        android:textAlignment="center"
        android:textColor="@color/white_hint"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/Log_out"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1.0" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/home_icon"
        android:importantForAccessibility="no"
        android:onClick="openHomePage"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintLeft_toLeftOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_bar" />

    <ImageButton
        android:id="@+id/addPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/add_icon"
        android:importantForAccessibility="no"
        android:onClick="openAddPassword"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="72dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/opened_profile_icon"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="@id/bottom_bar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:text="@string/OldPassword"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:text="@string/NewPassword"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/NewPassword"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#AEBABF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/OldPassword"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />


</androidx.constraintlayout.widget.ConstraintLayout>
